<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="model"
            type="idv.zijunliao.note.presentation.fragments.list.NoteListViewModel" />

        <import type="idv.zijunliao.note.data.use_case.Order" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_900"
        tools:context=".presentation.fragments.list.NoteListFragment">

        <LinearLayout
            android:id="@+id/layoutSort"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center|start"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:checkedChip="@id/chipTimestamp"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipTimestamp"
                    style="@style/Widget.MaterialComponents.Chip.Filter.Custom"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:text="@string/timestamp"
                    app:chipMinTouchTargetSize="0dp"
                    tools:ignore="TouchTargetSizeCheck" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipTitle"
                    style="@style/Widget.MaterialComponents.Chip.Filter.Custom"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:text="@string/title"
                    app:chipMinTouchTargetSize="0dp"
                    tools:ignore="TouchTargetSizeCheck" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipColor"
                    style="@style/Widget.MaterialComponents.Chip.Filter.Custom"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:text="@string/color"
                    app:chipMinTouchTargetSize="0dp"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.chip.ChipGroup>

            <View
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/order"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="10dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/desc_order"
                android:padding="2dp"
                android:src="@drawable/ic_baseline_south_24" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:backgroundTint="@color/gray_900"
            android:contentDescription="@string/desc_add_note"
            android:transitionName="@string/transition_from_listFragment_to_editFragment"
            app:backgroundTint="@color/white"
            app:borderWidth="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_24"
            app:tint="@android:color/white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/noteRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layoutAnimation="@anim/layout_animation_note_item"
            android:transitionGroup="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutSort" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>