<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="fragment"
            type="idv.zijunliao.note.presentation.fragments.find.NoteFindFragment" />

        <variable
            name="model"
            type="idv.zijunliao.note.presentation.fragments.find.NoteFindViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragments.find.NoteFindFragment">

        <LinearLayout
            android:id="@+id/recently"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="@{model.suggestions.size() > 0 ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/recent_search"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/clearSuggestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()-> fragment.clearSuggestions()}"
                app:srcCompat="@drawable/ic_baseline_delete_24" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="14dp"
            android:layoutAnimation="@anim/layout_animation_note_item"
            android:transitionGroup="true"
            android:visibility='@{model.nothing ? View.INVISIBLE : View.VISIBLE}'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroupSuggestions" />

        <idv.zijunliao.note.presentation.widgets.ExtendedChipGroup
            android:id="@+id/chipGroupSuggestions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:chipSpacingVertical="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recently"
            app:singleSelection="true" />

        <LinearLayout
            android:id="@+id/nothing"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility='@{model.nothing ? View.VISIBLE : View.INVISIBLE}'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroupSuggestions">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="96dp"
                android:layout_height="128dp"
                app:cardBackgroundColor="#FFD54F"
                app:cardCornerRadius="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/view"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/shape_circle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view1"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/shape_circle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14.75dp"
                android:text="@string/no_data_title"
                android:textColor="#BDBDBD"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/no_data_content"
                android:textColor="#919191" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
